update to Java8 usage: Converter.from, .stream instead of FluentIterable